Add and run clippy.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,10 @@ gitlab = { repository = "starshell/question", branch = "master" }
 appveyor = { repository = "starshell/question", branch = "master", service = "gitlab" }
 codecov = { repository = "starshell/question", branch = "master", service = "gitlab" }
 maintenance = { status = "actively-developed" }
+
+[dependencies]
+clippy = {version = "*", optional = true}
+
+[features]
+default = []
+strict = ["clippy"]
