--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@
   before_script:
     - rustup component add rustfmt-preview
   script:
-    - cargo fmt --all -- --write-mode=check
+    - cargo fmt --all -- --write-mode=diff
   allow_failure: true
 
 cache:
